hphp/hack/test/typecheck/unknown_xhp_class.php.exp
File "unknown_xhp_class.php", line 6, characters 11-15:
Unbound name: `:hello` (an object type) (Naming[2049])
